fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -11,7 +12,7 @@
   font-family: "Roboto", sans-serif;
   height: 50px;
   font-size: 14px;
-  margin: 8px;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -63,11 +64,11 @@
 
 /* Start of Main */
 main {
-  margin-top: 25px;
+  padding-top: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 200px);
+  height: calc(100vh - 150px);
 }
 
 .google {
@@ -148,7 +149,7 @@ footer {
   align-items: center;
   justify-content: space-around;
   font-size: 14px;
-  height: 90px;
+  height: 100px;
   background-color: rgb(242, 242, 242);
 }
 
